--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "server": "tsx server/index.ts",
     "lint": "eslint .",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "hono": "^4.10.6",
     "next": "^14.0.0",
     "prisma": "^6.19.0",
     "pusher": "^5.2.0",
@@ -19,11 +21,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@hono/node-server": "^1.19.6",
+    "@types/node": "^20.19.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
