--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@hono/node-server": "^1.19.6",
